--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
 
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- 
     - google font link
@@ -27,10 +27,10 @@
   <!-- 
     - preload images
   -->
-  <link rel="preload" as="image" href="./assets/images/logo.png">
-  <link rel="preload" as="image" href="./assets/images/hero-banner-1.jpg">
-  <link rel="preload" as="image" href="./assets/images/hero-banner-2.jpg">
-  <link rel="preload" as="image" href="./assets/images/hero-banner-3.jpg">
+  <link rel="preload" as="image" href="logo.png">
+  <link rel="preload" as="image" href="hero-banner-1.jpg">
+  <link rel="preload" as="image" href="hero-banner-2.jpg">
+  <link rel="preload" as="image" href="hero-banner-3.jpg">
 
 </head>
 
@@ -66,7 +66,7 @@
         </div>
 
         <a href="#" class="logo">
-          <img src="./assets/images/logo.png" width="179" height="26" alt="Glowing">
+          <img src="logo.png" width="179" height="26" alt="Glowing">
         </a>
 
         <div class="header-actions">
@@ -135,7 +135,7 @@
 
       <div class="wrapper">
         <a href="#" class="logo">
-          <img src="./assets/images/logo.png" width="179" height="26" alt="Glowing">
+          <img src="logo.png" width="179" height="26" alt="Glowing">
         </a>
 
         <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
@@ -189,7 +189,7 @@
           <ul class="has-scrollbar">
 
             <li class="scrollbar-item">
-              <div class="hero-card has-bg-image" style="background-image: url('./assets/images/hero-banner-1.jpg')">
+              <div class="hero-card has-bg-image" style="background-image: url('hero-banner-1.jpg')">
 
                 <div class="card-content">
 
@@ -212,7 +212,7 @@
             </li>
 
             <li class="scrollbar-item">
-              <div class="hero-card has-bg-image" style="background-image: url('./assets/images/hero-banner-2.jpg')">
+              <div class="hero-card has-bg-image" style="background-image: url('hero-banner-2.jpg')">
 
                 <div class="card-content">
 
@@ -235,7 +235,7 @@
             </li>
 
             <li class="scrollbar-item">
-              <div class="hero-card has-bg-image" style="background-image: url('./assets/images/hero-banner-3.jpg')">
+              <div class="hero-card has-bg-image" style="background-image: url('hero-banner-3.jpg')">
 
                 <div class="card-content">
 
@@ -288,7 +288,7 @@
                   <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                 </a>
 
-                <div class="has-bg-image" style="background-image: url('./assets/images/collection-1.jpg')"></div>
+                <div class="has-bg-image" style="background-image: url('collection-1.jpg')"></div>
 
               </div>
             </li>
@@ -306,7 +306,7 @@
                   <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                 </a>
 
-                <div class="has-bg-image" style="background-image: url('./assets/images/collection-2.jpg')"></div>
+                <div class="has-bg-image" style="background-image: url('collection-2.jpg')"></div>
 
               </div>
             </li>
@@ -324,7 +324,7 @@
                   <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                 </a>
 
-                <div class="has-bg-image" style="background-image: url('./assets/images/collection-3.jpg')"></div>
+                <div class="has-bg-image" style="background-image: url('collection-3.jpg')"></div>
 
               </div>
             </li>
@@ -361,7 +361,7 @@
               <div class="shop-card">
 
                 <div class="card-banner img-holder" style="--width: 540; --height: 720;">
-                  <img src="./assets/images/product-01.jpg" width="540" height="720" loading="lazy"
+                  <img src="product-01.jpg" width="540" height="720" loading="lazy"
                     alt="Facial cleanser" class="img-cover">
 
                   <span class="badge" aria-label="20% off">-20%</span>
@@ -418,7 +418,7 @@
               <div class="shop-card">
 
                 <div class="card-banner img-holder" style="--width: 540; --height: 720;">
-                  <img src="./assets/images/product-02.jpg" width="540" height="720" loading="lazy"
+                  <img src="product-02.jpg" width="540" height="720" loading="lazy"
                     alt="Bio-shroom Rejuvenating Serum" class="img-cover">
 
                   <div class="card-actions">
@@ -471,7 +471,7 @@
               <div class="shop-card">
 
                 <div class="card-banner img-holder" style="--width: 540; --height: 720;">
-                  <img src="./assets/images/product-03.jpg" width="540" height="720" loading="lazy"
+                  <img src="product-03.jpg" width="540" height="720" loading="lazy"
                     alt="Coffee Bean Caffeine Eye Cream" class="img-cover">
 
                   <div class="card-actions">
@@ -524,7 +524,7 @@
               <div class="shop-card">
 
                 <div class="card-banner img-holder" style="--width: 540; --height: 720;">
-                  <img src="./assets/images/product-04.jpg" width="540" height="720" loading="lazy"
+                  <img src="product-04.jpg" width="540" height="720" loading="lazy"
                     alt="Facial cleanser" class="img-cover">
 
                   <div class="card-actions">
@@ -577,7 +577,7 @@
               <div class="shop-card">
 
                 <div class="card-banner img-holder" style="--width: 540; --height: 720;">
-                  <img src="./assets/images/product-05.jpg" width="540" height="720" loading="lazy"
+                  <img src="product-05.jpg" width="540" height="720" loading="lazy"
                     alt="Coffee Bean Caffeine Eye Cream" class="img-cover">
 
                   <span class="badge" aria-label="20% off">-20%</span>
@@ -634,7 +634,7 @@
               <div class="shop-card">
 
                 <div class="card-banner img-holder" style="--width: 540; --height: 720;">
-                  <img src="./assets/images/product-06.jpg" width="540" height="720" loading="lazy"
+                  <img src="product-06.jpg" width="540" height="720" loading="lazy"
                     alt="Facial cleanser" class="img-cover">
 
                   <div class="card-actions">
@@ -707,7 +707,7 @@
               <div class="shop-card">
 
                 <div class="card-banner img-holder" style="--width: 540; --height: 720;">
-                  <img src="./assets/images/product-07.jpg" width="540" height="720" loading="lazy"
+                  <img src="product-07.jpg" width="540" height="720" loading="lazy"
                     alt="Facial cleanser" class="img-cover">
 
                   <span class="badge" aria-label="20% off">-20%</span>
@@ -764,7 +764,7 @@
               <div class="shop-card">
 
                 <div class="card-banner img-holder" style="--width: 540; --height: 720;">
-                  <img src="./assets/images/product-08.jpg" width="540" height="720" loading="lazy"
+                  <img src="product-08.jpg" width="540" height="720" loading="lazy"
                     alt="Bio-shroom Rejuvenating Serum" class="img-cover">
 
                   <div class="card-actions">
@@ -817,7 +817,7 @@
               <div class="shop-card">
 
                 <div class="card-banner img-holder" style="--width: 540; --height: 720;">
-                  <img src="./assets/images/product-09.jpg" width="540" height="720" loading="lazy"
+                  <img src="product-09.jpg" width="540" height="720" loading="lazy"
                     alt="Coffee Bean Caffeine Eye Cream" class="img-cover">
 
                   <div class="card-actions">
@@ -870,7 +870,7 @@
               <div class="shop-card">
 
                 <div class="card-banner img-holder" style="--width: 540; --height: 720;">
-                  <img src="./assets/images/product-10.jpg" width="540" height="720" loading="lazy"
+                  <img src="product-10.jpg" width="540" height="720" loading="lazy"
                     alt="Facial cleanser" class="img-cover">
 
                   <div class="card-actions">
@@ -923,7 +923,7 @@
               <div class="shop-card">
 
                 <div class="card-banner img-holder" style="--width: 540; --height: 720;">
-                  <img src="./assets/images/product-11.jpg" width="540" height="720" loading="lazy"
+                  <img src="product-11.jpg" width="540" height="720" loading="lazy"
                     alt="Coffee Bean Caffeine Eye Cream" class="img-cover">
 
                   <span class="badge" aria-label="20% off">-20%</span>
@@ -980,7 +980,7 @@
               <div class="shop-card">
 
                 <div class="card-banner img-holder" style="--width: 540; --height: 720;">
-                  <img src="./assets/images/product-01.jpg" width="540" height="720" loading="lazy"
+                  <img src="product-01.jpg" width="540" height="720" loading="lazy"
                     alt="Facial cleanser" class="img-cover">
 
                   <div class="card-actions">
@@ -1056,7 +1056,7 @@
 
                 <a href="#" class="btn btn-secondary">Explore More</a>
 
-                <div class="has-bg-image" style="background-image: url('./assets/images/banner-1.jpg')"></div>
+                <div class="has-bg-image" style="background-image: url('banner-1.jpg')"></div>
 
               </div>
             </li>
@@ -1072,7 +1072,7 @@
 
                 <a href="#" class="btn btn-secondary">Shop Sale</a>
 
-                <div class="has-bg-image" style="background-image: url('./assets/images/banner-2.jpg')"></div>
+                <div class="has-bg-image" style="background-image: url('banner-2.jpg')"></div>
 
               </div>
             </li>
@@ -1100,7 +1100,7 @@
             <li class="flex-item">
               <div class="feature-card">
 
-                <img src="./assets/images/feature-1.jpg" width="204" height="236" loading="lazy" alt="Guaranteed PURE"
+                <img src="feature-1.jpg" width="204" height="236" loading="lazy" alt="Guaranteed PURE"
                   class="card-icon">
 
                 <h3 class="h3 card-title">Guaranteed PURE</h3>
@@ -1116,7 +1116,7 @@
             <li class="flex-item">
               <div class="feature-card">
 
-                <img src="./assets/images/feature-2.jpg" width="204" height="236" loading="lazy"
+                <img src="feature-2.jpg" width="204" height="236" loading="lazy"
                   alt="Completely Cruelty-Free" class="card-icon">
 
                 <h3 class="h3 card-title">Completely Cruelty-Free</h3>
@@ -1132,7 +1132,7 @@
             <li class="flex-item">
               <div class="feature-card">
 
-                <img src="./assets/images/feature-3.jpg" width="204" height="236" loading="lazy"
+                <img src="feature-3.jpg" width="204" height="236" loading="lazy"
                   alt="Ingredient Sourcing" class="card-icon">
 
                 <h3 class="h3 card-title">Ingredient Sourcing</h3>
@@ -1162,10 +1162,10 @@
         <div class="container">
 
           <figure class="offer-banner">
-            <img src="./assets/images/offer-banner-1.jpg" width="305" height="408" loading="lazy" alt="offer products"
+            <img src="offer-banner-1.jpg" width="305" height="408" loading="lazy" alt="offer products"
               class="w-100">
 
-            <img src="./assets/images/offer-banner-2.jpg" width="450" height="625" loading="lazy" alt="offer products"
+            <img src="offer-banner-2.jpg" width="450" height="625" loading="lazy" alt="offer products"
               class="w-100">
           </figure>
 
@@ -1218,7 +1218,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner img-holder has-before hover:shine" style="--width: 700; --height: 450;">
-                  <img src="./assets/images/blog-1.jpg" width="700" height="450" loading="lazy" alt="Find a Store"
+                  <img src="blog-1.jpg" width="700" height="450" loading="lazy" alt="Find a Store"
                     class="img-cover">
                 </figure>
 
@@ -1239,7 +1239,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner img-holder has-before hover:shine" style="--width: 700; --height: 450;">
-                  <img src="./assets/images/blog-2.jpg" width="700" height="450" loading="lazy" alt="From Our Blog"
+                  <img src="blog-2.jpg" width="700" height="450" loading="lazy" alt="From Our Blog"
                     class="img-cover">
                 </figure>
 
@@ -1260,7 +1260,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner img-holder has-before hover:shine" style="--width: 700; --height: 450;">
-                  <img src="./assets/images/blog-3.jpg" width="700" height="450" loading="lazy" alt="Our Story"
+                  <img src="blog-3.jpg" width="700" height="450" loading="lazy" alt="Our Story"
                     class="img-cover">
                 </figure>
 
@@ -1395,7 +1395,7 @@
 
         <div class="wrapper">
           <p class="copyright">
-            &copy; 2024 techoverflows
+            &copy; 2024 Prajwal Shrestha 
           </p>
 
           <ul class="social-list">
@@ -1428,10 +1428,10 @@
         </div>
 
         <a href="#" class="logo">
-          <img src="./assets/images/logo.png" width="179" height="26" loading="lazy" alt="Glowing">
+          <img src="logo.png" width="179" height="26" loading="lazy" alt="Glowing">
         </a>
 
-        <img src="./assets/images/pay.png" width="313" height="28" alt="available all payment method" class="w-100">
+        <img src="pay.png" width="313" height="28" alt="available all payment method" class="w-100">
 
       </div>
 
